--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
   shared_preferences: ^2.5.1
+  permission_handler: ^11.3.1
+  mobile_scanner: ^6.0.6
 
 dev_dependencies:
   flutter_test:
