--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   shared_preferences: ^2.5.1
   permission_handler: ^11.3.1
   mobile_scanner: ^6.0.6
+  qr_flutter: ^4.1.0
+  dartssh2: ^2.11.0
 
 dev_dependencies:
   flutter_test:
