--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   mobile_scanner: ^6.0.6
   qr_flutter: ^4.1.0
   dartssh2: ^2.11.0
+  file_picker: ^8.3.7
 
 dev_dependencies:
   flutter_test:
